Assert that AudioContext::destination() is not called from the audio thread

Add assertion and comment that AudioContext::destination() cannot be
called from the audio thread and explain why.

BUG=604477, 561295
TEST=none

Review URL: https://codereview.chromium.org/1899903002

Cr-Commit-Position: refs/heads/master@{#388069}

Former-commit-id: bb4ad50fdcd777b451d98690e9ccf6b2c6677ea5