third_party/WebKit/Source/modules/webaudio/AbstractAudioContext.cpp
@@ -189,6 +189,14 @@ bool AbstractAudioContext::hasPendingActivity() const
     return !m_isCleared;
 }
 
+AudioDestinationNode* AbstractAudioContext::destination() const
+{
+    // Cannot be called from the audio thread because this method touches objects managed by Oilpan,
+    // and the audio thread is not managed by Oilpan.
+    ASSERT(!isAudioThread());
+    return m_destinationNode.get();
+}
+
 void AbstractAudioContext::throwExceptionForClosedState(ExceptionState& exceptionState)
 {
     exceptionState.throwDOMException(InvalidStateError, "AudioContext has been closed.");
